Fixed cut off logo

--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -1,6 +1,5 @@
 .nav-bar {
     width: 100%;
-    // height: 160px;
     position: absolute;
     z-index: 3;
 
@@ -8,22 +7,14 @@
         display: block;
         padding: 50px 0;
 
-
         img {
             position: absolute;
             left: 50px;
             width: 60px;
-            // border: 1px solid #1F7C80;
-            border-radius: 200px;
             padding: 0px 10px;
             height: auto;
             display: block;
             margin: 8px auto;
-
-
-            &.sub-logo {
-                width: 50px;
-            }
         }
     }
 
